# LIBSVM-CXX

./: CMakeLists.txt  LICENSE
include/: svm.h
libsvm/: libsvm.cpp  libsvm.h
src/: CMakeLists.txt  libsvm.cpp  main.cpp  svm.cpp  test.cpp
